--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:id="@+id/startVpnButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start VPN"
+        android:text="@string/start_vpn"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"/>
 
@@ -15,7 +15,7 @@
         android:id="@+id/stopVpnButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stop VPN"
+        android:text="@string/stop_vpn"
         android:layout_below="@id/startVpnButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
